Add json example

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beispiele für genesapi-tabular"
+    "# Beispiele für genesapi-tabular\n",
+    "\n",
+    "(Am Ende 1 Beispiel für json-Format)"
    ]
   },
   {
@@ -53,6 +55,7 @@
     "#### Format\n",
     "- `format=csv` (**default**)\n",
     "- `format=tsv` - Tabulator-getrennt\n",
+    "- `format=json` - json, 1 objekt pro Tabellenzeile + Tabellen-Metadaten (Beispiel siehe unten)\n",
     "- `delimiter=,` (**default**) stattdessen ginge auch `delimiter=;`\n",
     "\n",
     "#### Datumsformat\n",
@@ -6182,6 +6185,129 @@
    "source": [
     "get_df('?data=12511:BEV008(AUFDA1:AUFDA00B08|AUFDA15B20)&labels=name&sort=time')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JSON\n",
+    "\n",
+    "`format=json`\n",
+    "\n",
+    "Gibt die Daten (key: `data`) als json (response mimetype: `application/json`) zurück samt metadaten (key: `schema`) zur Tabellenstruktur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://tabular.genesapi.org?data=11111:FLC006&time=2017&layout=region&format=json\n",
+      "{\n",
+      "  \"schema\": {\n",
+      "    \"fields\": [\n",
+      "      {\n",
+      "        \"name\": \"region_id\",\n",
+      "        \"type\": \"string\"\n",
+      "      },\n",
+      "      {\n",
+      "        \"name\": \"2017\",\n",
+      "        \"type\": \"number\"\n",
+      "      }\n",
+      "    ],\n",
+      "    \"primaryKey\": [\n",
+      "      \"region_id\"\n",
+      "    ],\n",
+      "    \"pandas_version\": \"0.20.0\"\n",
+      "  },\n",
+      "  \"data\": [\n",
+      "    {\n",
+      "      \"region_id\": \"01\",\n",
+      "      \"2017\": 15804.2\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"02\",\n",
+      "      \"2017\": 755.09\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"03\",\n",
+      "      \"2017\": 47709.82\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"04\",\n",
+      "      \"2017\": 419.84\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"05\",\n",
+      "      \"2017\": 34112.45\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"06\",\n",
+      "      \"2017\": 21115.68\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"07\",\n",
+      "      \"2017\": 19858.0\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"08\",\n",
+      "      \"2017\": 35673.73\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"09\",\n",
+      "      \"2017\": 70542.03\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"10\",\n",
+      "      \"2017\": 2571.1\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"11\",\n",
+      "      \"2017\": 891.12\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"12\",\n",
+      "      \"2017\": 29654.37\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"13\",\n",
+      "      \"2017\": 23293.3\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"14\",\n",
+      "      \"2017\": 18449.97\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"15\",\n",
+      "      \"2017\": 20453.79\n",
+      "    },\n",
+      "    {\n",
+      "      \"region_id\": \"16\",\n",
+      "      \"2017\": 16202.41\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json  # for pretty printing\n",
+    "url = BASE_URL + '?data=11111:FLC006&time=2017&layout=region&format=json'\n",
+    "print(url)\n",
+    "data = requests.get(url)\n",
+    "print(json.dumps(data.json(), indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
