✨ Always get region_id and region_name

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -19,7 +19,7 @@
     "import requests\n",
     "from io import StringIO\n",
     "\n",
-    "BASE_URL = 'https://tabular.genesapi.org'\n",
+    "BASE_URL = 'localhost:5000' # 'https://tabular.genesapi.org'\n",
     "\n",
     "# for nice DataFrame display in this notebook:\n",
     "def get_df(query):\n",
@@ -48,9 +48,8 @@
     "- `layout=long` - Eine Zeile pro Wert (**default**)\n",
     "\n",
     "#### Beschriftungen\n",
-    "- `labels=id` (**default**) - Nur Kürzel/ids\n",
-    "- `labels=name` - ausgeschriebene Namen\n",
-    "- `labels=both` - beschriftung id + name\n",
+    "- `labels=id` (**default**) - Nur Kürzel/ids bei Statistiken\n",
+    "- `labels=name` - ausgeschriebene Namen bei Statistiken\n",
     "\n",
     "#### Format\n",
     "- `format=csv` (**default**)\n",
@@ -5700,7 +5699,7 @@
    "source": [
     "## Labels\n",
     "\n",
-    "Standardmäßig werden Regionen und Merkmale samt ihrer Ausprägungen mit ihren jeweiligen IDs angegeben. Mit `labels=name` werden diese Ids durch ihren ausgeschriebeneen Namen / Bezeichung ersetzt. `labels=both` gibt das Format *Name (id)* zurück."
+    "Standardmäßig werden Regionen mit IDs und Name angegeben. Merkmale samt ihrer Ausprägungen werden mit ihren jeweiligen IDs angegeben. Mit `labels=name` werden diese Ids durch ihren ausgeschriebeneen Namen / Bezeichung ersetzt."
    ]
   },
   {
@@ -7241,9 +7240,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
